compiler/tests/liva/errors/w001_unused_var.liva
// Linter fixture: W001 — unused variable
// Expected: warning [W001]: Unused variable
main() {
    let x = 5
    print("hello")
}
